clusters/home/apps/home/zwave-js-ui/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zwave-js-ui
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/hostname: "zwave.layertwo.dev"
    layertwo.dev/publish: "internal"
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    kubernetes.io/ingress.class: internal
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`zwave.layertwo.dev`)
    kind: Rule
    services:
    - name: zwave-js-ui
      port: 8091
